# simple-keyboard-service

./: .gitignore  Dockerfile  README.md  docker-build.sh  pyproject.toml
src/simple_keyboard_service/: main.py
